# SpotSeq

./: .gitignore  COPYING  Makefile.am  autogen.sh  configure.ac  ihmm.c  ihmm.h  ihmm_io.c  ihmm_io.h  matrix_io.c  matrix_io.h  model_nuc_seq.c  outdir.c  randomkit.c
m4/: ax_set_compile_flags.m4
paper/images/: Pfam_comp_image.tex  test_tikz_image.tex  tfbs_bench_figure.tex
scripts/: ENCODE_K562_ChIP_analysis.org  PFAM_tests.org  Pfam_tests.org  Standard_challenge_benchmark.org  create_double_lookup_table.sh  create_model.sh  heatmap_sprint.org  merge_scores.sh  plot_scores.R
src/: .dir-locals.el  Makefile.am  adjusted_rand_index.c  adjusted_rand_index.h  beam_sample.c  beam_sample.h  benchmark_seq.c  benchmark_seq.h  bias_model.c  bias_model.h  build_model.c  build_search_model.c  cairo_test.c  calibrate.c  calibrate.h  create_TFBS_benchmark_datasets.c  create_composition_benchmark_dataset.c  dijkstra.c  dijkstra.h  distributions.c  distributions.h  double_logsum_lookup.h  draw_sequence_logo.c  dtest.c  emit_motif.c  emit_random.c  emit_random.h  fast_hmm_param.c  fast_hmm_param.h  fast_hmm_param_test_functions.c  fast_hmm_param_test_functions.h  fast_transition.c  fast_transition.h  faster_hmm_param.c  faster_hmm_param.h  finite_hmm.c  finite_hmm.h  finite_hmm_alloc.c  finite_hmm_alloc.h  finite_hmm_io.c  (+103 more)
